<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:background="#f48fb1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="@string/title"
            android:textColor="@color/colorAccent"
            android:textSize="30dp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ff"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edituser"
                android:inputType="textEmailAddress"
                android:hint="@string/email"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/pass"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editpass"
            android:inputType="textEmailAddress"
            android:hint="@string/pass"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/login"
            android:hint="@string/login"/>

        <TextView
            android:id="@+id/txtregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:text="@string/click"
            android:textColor="@color/colorAccent"
            android:textSize="30dp"
            android:textStyle="bold" />

    </LinearLayout>



</RelativeLayout>